--- a/index.html
+++ b/index.html
@@ -54,9 +54,26 @@
               </nav>
             </div>
             <div class="col-lg-4 text-center">
-              <div class="site-logo">
+              <div class="container">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <div class="site-logo">
                 <a href="index.html">Интеллектуальные дома</a>
               </div>
+                  </div>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                    проектирование Монтаж Настройка
+                  </div>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                    8-925-518-3858
+                  </div>
+                </div>
+              </div>
+              
 
 
               <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-primary"></span></a></div>
