--- a/index.html
+++ b/index.html
@@ -300,10 +300,14 @@
     <div class="site-section">
       <div class="container">
         <div class="row w-100">
-          <div class="col brand">
+          <div class="col brand p-2">
             <a href="#"><img src="images/Brand/TIS.jpg"></a>
             <a href="#"><img src="images/Brand/Crestron.jpg"></a>
             <a href="#"><img src="images/Brand/Iridi.jpg"></a>
+            <a href="#"><img src="images/Brand/2N.jpg"></a>
+            <a href="#"><img src="images/Brand/Sonance.jpg"></a>
+            <a href="#"><img src="images/Brand/kef.jpg"></a>
+            <a href="#"><img src="images/Brand/BEALE-STREET.jpg"></a>
           </div>
         </div>
       </div>
