--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
 
     <div class="site-section">
       <div class="container">
-            <h2 class="heading-39291 mb-5">Где Мы делаем</h2>
-            <div class="card-deck">
+            <h2 class="heading-39291 mb-5">Где работают наши системы</h2>
+            <div class="card-group">
               <div class="card">
                 <div class="card-head">
-                Умная Квартира
+                Квартира
               </div>
                 <div class="card-body h2">
                   <a href="#">Мы устанавливаем умные устройства: лампы, розетки, термостаты, датчики движения и камеры. Теперь можем управлять светом, климатом и техникой со смартфона или голосовыми командами. Это не только удобно, но и помогает экономить энергию и повышает безопасность.
@@ -264,7 +264,7 @@
               </div>
               <div class="card">
                 <div class="card-head">
-                Умный Дом
+                Дом
               </div>
                 <div class="card-body h2">
                   <a href="#">Масштабный проект, чтобы сделать жизнь еще комфортнее и безопаснее. Мы оснащаем дом умными системами: управляем освещением, климатом, мультимедиа, безопасностью и поливом участка, управления бассейном. Это не только делает жизнь удобнее, но и помогает экономить ресурсы, обеспечивает безопасность и полный контроль над домом. </a>
@@ -274,7 +274,7 @@
               </div>
               <div class="card">
                 <div class="card-head">
-                Умный Отель
+                Отель
               </div>
                 <div class="card-body h2">
                   <a href="#">Автоматизируйте процессы бронирования, контроль доступа, освещение и климат в номерах, создавая комфорт для гостей и повышая эффективность работы персонала.</a>
@@ -283,7 +283,7 @@
               </div>
               <div class="card">
                 <div class="card-head">
-                Умный Офис
+                Офис
               </div>
                 <div class="card-body h2">
                   <a href="#">Пространство, где технологии делают работу комфортнее и эффективнее. Автоматизированное освещение, климат-контроль и управление конференц-системами и различной техникой экономят время и ресурсы. Системы безопасности и контроля доступа обеспечивают защиту, а централизованное управление через панель или ПК упрощает процессы. Умный офис повышает продуктивность и создает современную рабочую среду.</a>
