--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
     <div class="container-fluid mt-3">
         <div class="card-group">
         <div class="card">
+          <div class="card-head">
           Проектировние
+        </div>
           <div class="card-body h2">
             <a href="#">Разрабатываем индивидуальные проекты, интегрируя умные технологии в ваш дом, чтобы каждая система работала гармонично, обеспечивая комфорт, безопасность и удобство управления.
             </a>
@@ -145,7 +147,9 @@
           </div>
         </div>
         <div class="card">
+          <div class="card-head">
           Монтаж, Настройка
+        </div>
           <div class="card-body h2">
             <a href="#">Профессиональная установка и настройка оборудования для слаженной работы всех систем, обеспечивающих комфорт и надежность.</a>
             <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
@@ -153,14 +157,18 @@
           </div>
         </div>
         <div class="card">
+          <div class="card-head">
           Модернизация
+        </div>
           <div class="card-body h2">
             <a href="#">Обновляем и улучшаем существующие системы умного дома, интегрируя новые технологии для повышения комфорта, энергоэффективности и безопасности вашего дома</a>
             <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
           </div>
         </div>
         <div class="card">
+          <div class="card-head">
           Обслуживание
+        </div>
           <div class="card-body h2">
             <a href="#">Обеспечиваем регулярное техническое обслуживание системы, диагностику и оперативное устранение неполадок, чтобы ваши системы работали стабильно и без сбоев.</a>
             <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
@@ -249,7 +257,7 @@
 
 
     <div class="site-section">
-      <div class="container">
+      <div class="container-fluid">
             <h2 class="heading-39291 mb-5">Где работают наши системы</h2>
             <div class="card-group">
               <div class="card">
@@ -298,8 +306,8 @@
 
 
     <div class="site-section">
-      <div class="container">
-        <div class="row w-100">
+      <div class="container-fluid">
+        <div class="row">
           <div class="col brand p-2">
             <a href="#"><img src="images/Brand/TIS.jpg"></a>
             <a href="#"><img src="images/Brand/Crestron.jpg"></a>
@@ -422,7 +430,7 @@
             <div class="pt-5">
               <p class="small">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
             </div>
