--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
               </nav>
             </div>
             <div class="col-lg-4 text-center">
-              <div class="container">
+              <div class="container logo">
                 <div class="row align-items-center">
                   <div class="col">
                     <div class="site-logo">
-                <a href="index.html">Интеллектуальные дома</a>
-              </div>
+                      <a href="index.html">Интеллектуальные дома</a>
+                    </div>
                   </div>
                 </div>
                 <div class="row align-items-center">
                   <div class="col">
-                    проектирование Монтаж Настройка
+                    Проектирование Монтаж Настройка
                   </div>
                 </div>
                 <div class="row align-items-center">
@@ -312,10 +312,18 @@
             <a href="#"><img src="images/Brand/TIS.jpg"></a>
             <a href="#"><img src="images/Brand/Crestron.jpg"></a>
             <a href="#"><img src="images/Brand/Iridi.jpg"></a>
+            <a href="#"><img src="images/Brand/Lutron.jpg"></a>
+            <a href="#"><img src="images/Brand/Elan.jpg"></a>
+            <a href="#"><img src="images/Brand/rti.jpg"></a>
             <a href="#"><img src="images/Brand/2N.jpg"></a>
+            <a href="#"><img src="images/Brand/Hikvision.jpg"></a>
+            <a href="#"><img src="images/Brand/ATI.jpg"></a>
+            <a href="#"><img src="images/Brand/Primare.jpg"></a>
             <a href="#"><img src="images/Brand/Sonance.jpg"></a>
             <a href="#"><img src="images/Brand/kef.jpg"></a>
             <a href="#"><img src="images/Brand/BEALE-STREET.jpg"></a>
+            <a href="#"><img src="images/Brand/jvc.jpg"></a>
+            <a href="#"><img src="images/Brand/sony.jpg"></a>
           </div>
         </div>
       </div>
