--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="row align-items-center">
                   <div class="col">
                     <div class="site-logo">
-                      <a href="index.html">Интеллектуальные дома</a>
+                      интеллектуальные дома
                     </div>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
                 Квартира
               </div>
                 <div class="card-body h2">
-                  <a href="#">Мы устанавливаем умные устройства: лампы, розетки, термостаты, датчики движения и камеры. Теперь можем управлять светом, климатом и техникой со смартфона или голосовыми командами. Это не только удобно, но и помогает экономить энергию и повышает безопасность.
+                  <a href="#">Система автоматизации, которая управляет освещением, отоплением, безопасностью и бытовой техникой через смартфон или голосовые команды. Она делает жизнь комфортнее, экономнее и безопаснее, адаптируясь под привычки и потребности жильцов.
                   </a>
                   <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
                 </div>
@@ -275,7 +275,8 @@
                 Дом
               </div>
                 <div class="card-body h2">
-                  <a href="#">Масштабный проект, чтобы сделать жизнь еще комфортнее и безопаснее. Мы оснащаем дом умными системами: управляем освещением, климатом, мультимедиа, безопасностью и поливом участка, управления бассейном. Это не только делает жизнь удобнее, но и помогает экономить ресурсы, обеспечивает безопасность и полный контроль над домом. </a>
+                  <a href="#">Расширенная система автоматизации, которая управляет освещением, климатом, видеонаблюдением, воротами, поливом участка и другими функциями через централизованное управление. Он обеспечивает повышенный комфорт, энергоэффективность и безопасность для большого пространства, адаптируясь под ваши потребности.
+                  </a>
                   <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
       
                 </div>
@@ -294,7 +295,7 @@
                 Офис
               </div>
                 <div class="card-body h2">
-                  <a href="#">Пространство, где технологии делают работу комфортнее и эффективнее. Автоматизированное освещение, климат-контроль и управление конференц-системами и различной техникой экономят время и ресурсы. Системы безопасности и контроля доступа обеспечивают защиту, а централизованное управление через панель или ПК упрощает процессы. Умный офис повышает продуктивность и создает современную рабочую среду.</a>
+                  <a href="#">Интеллектуальная система, автоматизирует управление светом, климатом, контролем доступа и рабочими процессами для повышения комфорта сотрудников и энергоэффективности. Она оптимизирует рабочее пространство, позволяя создать современную и продуктивную среду.</a>
                   <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
                 </div>
               </div>
