--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <title>Marga &mdash; Website Template by Colorlib</title>
@@ -43,38 +43,50 @@
 
         <div class="container">
           <div class="row align-items-center position-relative">
-
             <div class="col-lg-4">
               <nav class="site-navigation text-right ml-auto " role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="project.html" class="nav-link">Projects</a></li>
-                  <li><a href="services.html" class="nav-link">Services</a></li>
+ <!--                <li class="active"><a href="index.html" class="nav-link">Главная</a></li>--> 
+                  <li><a href="index.html" class="nav-link">Главная</a></li>
+                  <li><a href="project.html" class="nav-link">Проекты</a></li>
                 </ul>
               </nav>
             </div>
             <div class="col-lg-4 text-center">
-              <div class="site-logo">
-                <a href="index.html">Marga</a>
+              <div class="container logo">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <div class="site-logo">
+                      интеллектуальные дома
+                    </div>
+                  </div>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                    Проектирование Монтаж Настройка
+                  </div>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                    8-925-518-3858
+                  </div>
+                </div>
               </div>
-
-
-              <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-primary"></span></a></div>
+              <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-primary"></span></a>
+              </div>
             </div>
             <div class="col-lg-4">
               <nav class="site-navigation text-left mr-auto " role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                  <li><a href="about.html" class="nav-link">About</a></li>
-                  <li><a href="blog.html" class="nav-link">Blog</a></li>
-                  <li class="active"><a href="contact.html" class="nav-link">Contact</a></li>
+                  
+<!--                  <li><a href="blog.html" class="nav-link">Блог</a></li> --> 
+                  <li><a href="services.html" class="nav-link">Услуги</a></li>
+                  <li><a href="about.html" class="nav-link">О Нас</a></li>
                 </ul>
               </nav>
             </div>
-            
-
           </div>
         </div>
-
       </header>
 
 
@@ -131,13 +143,13 @@
           </div>
           <div class="col-lg-4 ml-auto">
             <div class="bg-white p-3 p-md-5">
-              <h3 class="heading-39291">Contact Info</h3>
+              <h3 class="heading-39291">Контакты</h3>
               <ul class="list-unstyled footer-link">
                 <li class="d-block mb-3">
-                  <span class="d-block text-black small text-uppercase font-weight-bold">Address:</span>
+                  <span class="d-block text-black small text-uppercase font-weight-bold">Адрес:</span>
                   <span>34 Street Name, City Name Here, United States</span></li>
-                <li class="d-block mb-3"><span class="d-block text-black small text-uppercase font-weight-bold">Phone:</span><span>+1 242 4942 290</span></li>
-                <li class="d-block mb-3"><span class="d-block text-black small text-uppercase font-weight-bold">Email:</span><span>info@yourdomain.com</span></li>
+                <li class="d-block mb-3"><span class="d-block text-black small text-uppercase font-weight-bold">Телефон:</span><span>+7 925 518 3858</span></li>
+                <li class="d-block mb-3"><span class="d-block text-black small text-uppercase font-weight-bold">Е-майл:</span><span>info@yourdomain.com</span></li>
               </ul>
             </div>
           </div>
