--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -43,7 +42,6 @@
 
         <div class="container">
           <div class="row align-items-center position-relative">
-
             <div class="col-lg-4">
               <nav class="site-navigation text-right ml-auto " role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
@@ -73,25 +71,20 @@
                   </div>
                 </div>
               </div>
-              
-
-
-              <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-primary"></span></a></div>
+              <div class="ml-auto toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-white"><span class="icon-menu h3 text-primary"></span></a>
+              </div>
             </div>
             <div class="col-lg-4">
               <nav class="site-navigation text-left mr-auto " role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                   <li><a href="about.html" class="nav-link">О Нас</a></li>
-<!--                  <li><a href="blog.html" class="nav-link">Блог</a></li>
- -->                 <li><a href="contact.html" class="nav-link">Контакты</a></li>
+<!--                  <li><a href="blog.html" class="nav-link">Блог</a></li> --> 
+                  <li><a href="contact.html" class="nav-link">Контакты</a></li>
                 </ul>
               </nav>
             </div>
-            
-
           </div>
         </div>
-
       </header>
 
 
