--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col brand p-2">
-            <a href="#"><img src="images/Brand/TIS.jpg"></a>
+            <a href="#"><img src="images/Brand/TIS.jpg" width="50" height="50"></a>
             <a href="#"><img src="images/Brand/Crestron.jpg"></a>
             <a href="#"><img src="images/Brand/Iridi.jpg"></a>
             <a href="#"><img src="images/Brand/Lutron.jpg"></a>
@@ -329,7 +329,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-7">
-            <h2 class="heading-39291 mb-0">Our Projects</h2>
+            <h2 class="heading-39291 mb-0">Проекты</h2>
           </div>
           <div class="col-md-5 text-right">
             <p class="mb-0"><a href="#" class="more-39291">View All Projects</a></p>
@@ -385,21 +385,21 @@
     <footer class="site-footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="row">
               <div class="col-md-7">
-                <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                <h2 class="footer-heading mb-4">О Нас</h2>
+                <p>Более 25 лет на рынке слаботочных систем, Сотни реализованных проектов, Огромное колличество довольных клиентов. Мы будем рады Вас видеть в списке наших клиентов.</p>
 
               </div>
               <div class="col-md-4 ml-auto">
-                <h2 class="footer-heading mb-4">Features</h2>
+                <h2 class="footer-heading mb-4">Меню</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">О Нас</a></li>
+                  <li><a href="#">Проектирование умного дома</a></li>
+                  <li><a href="#">Умный дом "под ключ"</a></li>
+                  <li><a href="#">Умный дом для электриков</a></li>
+                  <li><a href="#">Автоматизация Отеля</a></li>
                 </ul>
               </div>
 
@@ -408,31 +408,32 @@
           <div class="col-md-4 ml-auto">
 
             <div class="mb-5">
-              <h2 class="footer-heading mb-4">Subscribe to Newsletter</h2>
+              <h2 class="footer-heading mb-4">Подписаться</h2>
               <form action="#" method="post" class="footer-suscribe-form">
                 <div class="input-group mb-3">
-                  <input type="text" class="form-control rounded-0 border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
+                  <input type="text" class="form-control rounded-0 border-secondary text-white bg-transparent" placeholder="Введите Email" aria-label="Enter Email" aria-describedby="button-addon2">
                   <div class="input-group-append">
-                    <button class="btn btn-primary text-white" type="button" id="button-addon2">Subscribe</button>
+                    <button class="btn btn-primary text-white" type="button" id="button-addon2">Отправить</button>
                   </div>
                 </div>
             </div>
 
-
+<!--
             <h2 class="footer-heading mb-4">Follow Us</h2>
             <a href="#about-section" class="smoothscroll pl-0 pr-3"><span class="icon-facebook"></span></a>
             <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
             <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
             <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-            </form>
+            -->
+          </form>
           </div>
         </div>
-        <div class="row pt-5 mt-5 text-center">
+        <div class="row pt-1 mt-1 text-center">
           <div class="col-md-12">
-            <div class="pt-5">
+            <div class="pt-0">
               <p class="small">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Интеллектуальные Дома. All rights reserved</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
             </div>
