--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
           Проектировние
         </div>
           <div class="card-body h2">
-            <a href="#">Разрабатываем индивидуальные проекты, интегрируя умные технологии в ваш дом, чтобы каждая система работала гармонично, обеспечивая комфорт, безопасность и удобство управления.
+            <a href="designing.html">Разрабатываем индивидуальные проекты, интегрируя умные технологии в ваш дом, чтобы каждая система работала гармонично, обеспечивая комфорт, безопасность и удобство управления.
             </a>
-            <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+            <p class="my-3"><a href="designing.html" class="more-39291">Подробнее</a></p>
           </div>
         </div>
         <div class="card">
@@ -144,8 +144,8 @@
           Монтаж, Настройка
         </div>
           <div class="card-body h2">
-            <a href="#">Профессиональная установка и настройка оборудования для слаженной работы всех систем, обеспечивающих комфорт и надежность.</a>
-            <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+            <a href="installation.html">Профессиональная установка и настройка оборудования для слаженной работы всех систем, обеспечивающих комфорт и надежность.</a>
+            <p class="my-3"><a href="installation.html" class="more-39291">Подробнее</a></p>
 
           </div>
         </div>
