--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           Модернизация
         </div>
           <div class="card-body h2">
-            <a href="#">Обновляем и улучшаем существующие системы умного дома, интегрируя новые технологии для повышения комфорта, энергоэффективности и безопасности вашего дома</a>
-            <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+            <a href="upgrading.html">Обновляем и улучшаем существующие системы умного дома, интегрируя новые технологии для повышения комфорта, энергоэффективности и безопасности вашего дома</a>
+            <p class="my-3"><a href="upgrading.html" class="more-39291">Подробнее</a></p>
           </div>
         </div>
         <div class="card">
@@ -163,8 +163,8 @@
           Обслуживание
         </div>
           <div class="card-body h2">
-            <a href="#">Обеспечиваем регулярное техническое обслуживание системы, диагностику и оперативное устранение неполадок, чтобы ваши системы работали стабильно и без сбоев.</a>
-            <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+            <a href="maintenance.html">Обеспечиваем регулярное техническое обслуживание системы, диагностику и оперативное устранение неполадок, чтобы ваши системы работали стабильно и без сбоев.</a>
+            <p class="my-3"><a href="maintenance.html" class="more-39291">Подробнее</a></p>
           </div>
         </div>
     </div>
