--- a/designing — копия.html
+++ b/designing — копия.html
@@ -91,8 +91,8 @@
 
 
 
-    <div class="ftco-blocks-cover-2">
-        <div class="ftco-cover-2" style="background-image: url('images/hero_1.jpg');">
+    <div class="ftco-blocks-cover-1">
+        <div class="ftco-cover-1" style="background-image: url('images/hero_1.jpg');">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12 text-center">
@@ -109,20 +109,37 @@
     
     <div class="site-section">
       <div class="container">
+        <div class="row mb-5 align-items-center">
           <div class="col-md-7">
             <h2 class="heading-39291 mb-0">Проектирование</h2>
           </div>
+        </div>
 
+        <div class="row">
+          <div class="col-md-6 mb-12 col-lg-12" data-aos="fade-up" data-aos-delay="">
+            <div class="service-29193 text-center">
+              <h3 class="mb-4"><a href="#">Проектирование</a></h3>
+              <p>Умный дом -достаточно сложная и многофункциональная система, нужно учесть все моменты в процессе эксплуатации, исключить множество ошибок, которые могут возникнуть на этапе монтажа и при дальнейшем использовании системы. Именно это делается нами на этапе проектирования.</p>
+              <img src="images/men.jpg" alt="" width="500">
+              <p>Первым и наиболее важным шагом является детальное выяснение ваших потребностей и ожиданий. Необходимо определить, какие функции умного дома наиболее приоритетны для вас: безопасность, управление освещением, климат-контроль, мультимедийные системы или энергоэффективность. Мы поможем вам определиться с возможностями системы, выбрать необходимые сценарии. Это позволит нам создать систему, максимально соответствующую вашему образу жизни и предпочтениям.</p>
+              <P>В зависимости от бюджета проекта, его специфики и ваших желаний, мы подберём оборудование для умного дома, проводное или комплексное решение, топологию системы умного дома.</P>
+              <P>Проектирование умного дома мы начинаем на этапе разработки архитектурного проекта. Совместная работа с архитекторами и дизайнерами интерьера позволяет нам предусмотреть места для размещения оборудования, прокладки кабельных трасс, установки датчиков и панелей управления, что обеспечивает эстетичность и функциональность системы.</P>
+              <P>Также, нам необходимо предусмотреть защиту системы от несанкционированного доступа, обеспечить резервное питание и стабильность работы всех компонентов. Кроме того, интеграция с системами видеонаблюдения и охранной сигнализацией повысит общий уровень вашей безопасности.</P>
+              <P>Технологии постоянно развиваются, и важно, чтобы система умного дома была готова к интеграции новых устройств и функций в будущем. Проектируя систему с учетом масштабируемости, мы позволяем ее легко обновлять и расширять в дальнейшем без значительных изменений в инфраструктуре.</P>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
     
-      <div class="container mb-4">
+      <div class="container">
 
         <div class="row ">
           <div class="col-12">
             <div class="box-descr text-center">
-              <h3 class="mb-4 heading">Проектирование</h3>
+              <h3 class="mb-4"><a href="#">Проектирование</a></h3>
                                 <p>Умный дом -достаточно сложная и многофункциональная система, нужно учесть все моменты в процессе эксплуатации, исключить множество ошибок, которые могут возникнуть на этапе монтажа и при дальнейшем использовании системы. Именно это делается нами на этапе проектирования.</p>
 
               <div class="row  d-flex justify-content-center align-items-center">
@@ -152,7 +169,7 @@
                 </div>
               </div>
 
-              <div class="row mb-3 d-flex justify-content-center align-items-center">
+              <div class="row  d-flex justify-content-center align-items-center">
                 <div class="col-6">
                   <P>Также, нам необходимо предусмотреть защиту системы от несанкционированного доступа, обеспечить резервное питание и стабильность работы всех компонентов. Кроме того, интеграция с системами видеонаблюдения и охранной сигнализацией повысит общий уровень вашей безопасности.</P>
 
