--- a/designing.html
+++ b/designing.html
@@ -117,7 +117,7 @@
     </div>
 
     
-      <div class="container mb-4">
+      <div class="container serv mb-4">
 
         <div class="row ">
           <div class="col-12">
