--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="card-group">
         <div class="card">
           <div class="card-head">
-          Проектировние
+          Проектирование
         </div>
           <div class="card-body h2">
             <a href="designing.html">Разрабатываем индивидуальные проекты, интегрируя умные технологии в ваш дом, чтобы каждая система работала гармонично, обеспечивая комфорт, безопасность и удобство управления.
