--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
  <!--                <li class="active"><a href="index.html" class="nav-link">Главная</a></li>--> 
                   <li><a href="project.html" class="nav-link">Проекты</a></li>
-                  <li><a href="services.html" class="nav-link">Услуги</a></li>
+                  <li><a href="#service" class="nav-link">Услуги</a></li>
                 </ul>
               </nav>
             </div>
@@ -126,10 +126,11 @@
     </div>
 
 
-    
-    <div class="container-fluid mt-3">
+   
+    <div class="container-fluid mt-3"> 
         <div class="card-group">
-        <div class="card">
+        <div class="card"> 
+          <a id="service"></a>
           <div class="card-head">
           Проектирование
         </div>
