--- a/designing.html
+++ b/designing.html
@@ -123,19 +123,19 @@
           <div class="col-12">
             <div class="box-descr text-center">
               <h3 class="mb-4 heading">Проектирование</h3>
-                                <p>Умный дом -достаточно сложная и многофункциональная система, нужно учесть все моменты в процессе эксплуатации, исключить множество ошибок, которые могут возникнуть на этапе монтажа и при дальнейшем использовании системы. Именно это делается нами на этапе проектирования.</p>
+                                <p>Умный дом — это многофункциональная система, требующая тщательного подхода, чтобы избежать ошибок во время установки и эксплуатации. Мы учитываем все детали на этапе проектирования, обеспечивая надежность и удобство использования в будущем.</p>
 
               <div class="row  d-flex justify-content-center align-items-center">
                 <div class="col-6">
                   <img src="images/men.jpg" alt="" width="500">
                 </div>
                 <div class="col-6">
-                  <p>Первым и наиболее важным шагом является детальное выяснение ваших потребностей и ожиданий. Необходимо определить, какие функции умного дома наиболее приоритетны для вас: безопасность, управление освещением, климат-контроль, мультимедийные системы или энергоэффективность. Мы поможем вам определиться с возможностями системы, выбрать необходимые сценарии. Это позволит нам создать систему, максимально соответствующую вашему образу жизни и предпочтениям.</p>
+                  <p>Сначала мы подробно выясняем ваши потребности и ожидания, определяя, что для вас важнее: безопасность, управление светом, климатом, мультимедиа или экономия энергии. Мы поможем выбрать подходящие функции и сценарии, чтобы система идеально вписалась в ваш образ жизни.</p>
                 </div>
               </div>
               <div class="row  d-flex justify-content-center align-items-center">
                 <div class="col-6">
-              <P>В зависимости от бюджета проекта, его специфики и ваших желаний, мы подберём оборудование для умного дома, проводное или комплексное решение, топологию системы умного дома.</P>
+              <P>Мы подберем оборудование для умного дома — проводное или комплексное — с учетом вашего бюджета, пожеланий и особенностей проекта, чтобы система работала идеально.</P>
 
                 </div>
                 <div class="col-6">
@@ -147,14 +147,14 @@
                   <img src="images/project.jpg" alt="" width="500">
                 </div>
                 <div class="col-6">
-                  <P>Проектирование умного дома мы начинаем на этапе разработки архитектурного проекта. Совместная работа с архитекторами и дизайнерами интерьера позволяет нам предусмотреть места для размещения оборудования, прокладки кабельных трасс, установки датчиков и панелей управления, что обеспечивает эстетичность и функциональность системы.</P>
+                  <P>Мы начинаем проектирование умного дома вместе с разработкой архитектурного проекта, сотрудничая с архитекторами и дизайнерами, чтобы грамотно разместить оборудование, спрятать провода и установить датчики, сохраняя красоту и удобство вашего дома.</P>
 
                 </div>
               </div>
 
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 <div class="col-6">
-                  <P>Также, нам необходимо предусмотреть защиту системы от несанкционированного доступа, обеспечить резервное питание и стабильность работы всех компонентов. Кроме того, интеграция с системами видеонаблюдения и охранной сигнализацией повысит общий уровень вашей безопасности.</P>
+                  <P>Мы защитим ваш умный дом от взлома, обеспечим резервное питание и стабильную работу всех устройств, а также подключим систему видеонаблюдения, домофонию и сигнализацию для вашей полной безопасности.</P>
 
                 </div>
                 <div class="col-6">
@@ -162,7 +162,7 @@
                 </div>
               </div>
 
-              <P>Технологии постоянно развиваются, и важно, чтобы система умного дома была готова к интеграции новых устройств и функций в будущем. Проектируя систему с учетом масштабируемости, мы позволяем ее легко обновлять и расширять в дальнейшем без значительных изменений в инфраструктуре.</P>
+              <P>Технологии не стоят на месте, и мы проектируем умный дом так, чтобы в будущем вы могли легко добавлять новые устройства и функции без серьезных изменений в системе.</P>
             </div>
           </div>
 
