--- a/installation.html
+++ b/installation.html
@@ -129,13 +129,13 @@
                     <img src="images/cabling.jpg" alt="" width="500">
                   </div>
                   <div class="col-6">
-                    <p>Монтаж системы умный дом мы начинаем с прокладки коммуникаций, согласно схемам размещения кабелей, однолинейными схемами и кабельным журналам. Прокладка кабелей осуществляется до момента черновой отделки помещений.</p>
-                    <p>Затем мы подготавливаются места для размещения шкафов и стоек. Делаются отверстия и устанавливаются монтажные коробки под панели управления, датчики и СКС.</p>
+                    <p>Мы начинаем монтаж умного дома с прокладки всех нужных проводов, следуя схемам проекта, чтобы все было аккуратно и точно — и делаем это еще до черновой отделки вашего дома.</p>
+                    <p>Затем мы подготавливаем места для размещения шкафов и стоек с оборудованием. Подготавлиывем отверстия и устанавливаем монтажные коробки под панели управления, датчики и другое оборудования.</p>
                   </div>
                 </div>
                 <div class="row  d-flex justify-content-center align-items-center">
                   <div class="col-6">
-                <P>Когда вы начинаете чистовую отделку помещений, мы производим сборку шкафов и щитов автоматики, согласно схемам размещения модулей, а также мы конфигурируем СКС.</P>
+                <P>Как только вы начинаете чистовую отделку, мы собираем шкафы и щиты автоматики по схемам и настраиваем системы связи, чтобы все было готово к финальному этапу.</P>
   
                   </div>
                   <div class="col-6">
@@ -147,7 +147,7 @@
                     <img src="images/montage1.jpg" alt="" width="500">
                   </div>
                   <div class="col-6">
-                    <P>А после финальной отделки ваших помещений, мы устанавливаем и подключаем шкафы и щиты умного дома, Аудио-Видео оборудование, монтируем датчики и панели управления. Далее мы производим пробные запуски систем по-отдельности, а после удачного тестирования каждой подсистемы, мы конфигурируем системы умного дома и производим полный запуск системы.</P>
+                    <P>После завершения отделки мы устанавливаем шкафы, щиты, аудио-видео оборудование, датчики и панели управления, а затем тестируем каждую часть системы отдельно. Когда все проверено, мы запускаем ваш умный дом целимом.</P>
   
                   </div>
                 </div>
@@ -162,7 +162,7 @@
   
                 <div class="row mb-3 d-flex justify-content-center align-items-center">
                   <div class="col-6">
-                    <P>После процесса монтажа и конфигурирования мы плавно переходим к процессу настройки и программированию вашей системы умного дома и других смежных подсистем. На этом этапе мы запрограммируем различные сценарии работы вашей системы умный дом, настроим панели управления под вас и датчики. Установим и настроим ПО на ваши телефоны и планшеты, настроим голосовое управление.</P>
+                    <P>После монтажа мы переходим к настройке: конфигурируем систему, программируем сценарии работы умного дома, настраиваем панели управления и датчики под вас, устанавливаем приложения на ваши телефон и планшет, а также настраиваем голосовое управление.</P>
   
                   </div>
                   <div class="col-6">
@@ -170,7 +170,7 @@
                   </div>
                 </div>
   
-                <P>Проведем тестирование работы вашей системы и проверку работы сценариев. Обучим вас и членов вашей семьи пользоваться вашей системой умный дом.</P>
+                <P>Мы тщательно проверим работу системы и всех сценариев, а затем научим вас и вашу семью пользоваться умным домом, чтобы все было просто и понятно. Сделайте ваш дом умным без лишних забот — закажите наши услуги на сайте!</P>
               </div>
             </div>
   
