--- a/upgrading.html
+++ b/upgrading.html
@@ -121,19 +121,19 @@
           <div class="col-12">
             <div class="box-descr text-center">
               <h3 class="mb-4 heading">Модернизация</h3>
-              <p>Умный дом, однажды внедренный в повседневную жизнь, не остается статичным — с развитием технологий его системы требуют регулярной модернизации для сохранения актуальности, эффективности и безопасности.</p>
+              <p>Умный дом, став частью вашкй жизни, не стоит на месте — технологии развиваются, и чтобы ваш умный дом оставался удобным, эффективным и безопасным, его нужно регулярно обновлять. Не упусти шанс сделать свой дом еще лучше!</p>
 
               <div class="row  d-flex justify-content-center align-items-center">
                 <div class="col-6">
                   <img src="images/modernize.jpg" alt="" width="500">
                 </div>
                 <div class="col-6">
-                  <p>Проводя модернизацию, мы поможем вам обновить оборудование на современное, обновим программное обеспечение и добавим новые функции в вашу систему умного дома, все это позволит адаптировать ваше жилое пространство к новым, меняющимся потребностям пользователей умного дома. Этот процесс не только продлевает срок службы системы умного дома, но и открывает новые возможности для повышения вашего уровня комфорта и энергоэффективности.</p>
+                  <p>Мы поможем вам модернизировать умный дом: заменим старое оборудование на новое, обновим программы и добавим новые функции. Так ваш дом подстроится под ваши новые желания, станет удобнее, сэкономит энергию и прослужит дольше.</p>
                 </div>
               </div>
               <div class="row  d-flex justify-content-center align-items-center">
                 <div class="col-6">
-              <P>Первым шагом в модернизации вашего умного дома является оценка текущего состояния системы. Наши специалисты проанализируют устаревшие устройства и заменяют их на модели с улучшенными характеристиками, поддерживающими современные протоколы связи, обеспечивающие улучшенный функционал. Мы дополним систему новыми датчиками — движения, влажности или качества воздуха, позволяя автоматически регулировать вентиляцию или освещение в зависимости от условий. Мы заменим старые панели управления в вашей системе умного дома на новые панели с улучшенным дизайном и функционалом.</P>
+              <P>Хотите модернизировать умный дом? Наши специалистыы оценят, что устарело, и заменят это на современные устройства с улучшенными характеристиками и поддержкой новых технологий. Добавим датчики — движения, влажности, качества воздуха и др., чтобы свет, вентиляция и другие системы сами подстраивались под обстановку. А старые панели управления поменяем на стильные и удобные — ваш дом станет еще умнее!</P>
 
                 </div>
                 <div class="col-6">
