--- a/maintenance.html
+++ b/maintenance.html
@@ -123,19 +123,19 @@
             <div class="col-12">
               <div class="box-descr text-center">
                 <h3 class="mb-4 heading">Обслуживание</h3>
-                                  <p>Умный дом — это сложная экосистема, где датчики, устройства и программное обеспечение работают в гармонии, создавая комфорт и безопасность для вашего дома, но без регулярного обслуживания даже самая передовая система может утратить свою эффективность.</p>
+                                  <p>Умный дом — это целая система, где датчики, гаджеты и программы слаженно создают уют и безопасность. Но без регулярного ухода даже самая современная техника может подвести.</p>
   
                 <div class="row  d-flex justify-content-center align-items-center">
                   <div class="col-6">
                     <img src="images/modernization.jpg" alt="" width="500">
                   </div>
                   <div class="col-6">
-                    <p>В процессе обслуживания умного дома мы проведем профилактические проверки, обновим ПО, продиагностируем оборудование, отремонтируем или проведем замену модулей, это позволит поддержать бесперебойную работу вашей системы умного дома и адаптировать ее к новым вызовам. Такой подход не только предотвращает сбои, но и продлевает срок службы устройств, сохраняя ваши инвестиции.</p>
+                    <p>Мы позаботимся о вашем умном доме: проведем профилактику, обновим софт, протестируем оборудование, починим или заменим модули. Так система будет работать без перебоев и подстроится под новые задачи. Это не только спасет систему от поломок, но и продлит жизнь вашим устройствам, что сэкономит ваши вложения.</p>
                   </div>
                 </div>
                 <div class="row  d-flex justify-content-center align-items-center">
                   <div class="col-6">
-                <P>Первым шагом мы проводим диагностика оборудования. Наши специалисты проверят состояние модулей управления, датчиков, камер и других устройств, выявляя износ или неисправности. Параллельно мы проводим тестирование сети: стабильность связи между устройствами критически важна, так как даже кратковременные сбои могут нарушить сценарии автоматизации, такие как автоматическое включение света или климат-контроля.</P>
+                <P>Сначала мы проверим ваше оборудование: протестируем модули управления, датчики, камеры и все остальные устройства, обнаружим поломки. Заодно проверим сеть — чтобы устройства не теряли связь, ведь даже мелкий сбой может нарушить работу автоматики.</P>
   
                   </div>
                   <div class="col-6">
@@ -147,13 +147,13 @@
                     <img src="images/programming.jpg" alt="" width="500">
                   </div>
                   <div class="col-6">
-                    <P>Производители регулярно выпускают патчи, устраняющие уязвимости и добавляющие новые функции, поэтому своевременная установка обновлений и приложений управления предотвращает сбои и повышает безопасность. Мы также пересматриваем сценарии автоматизации: со временем ваши привычки могут меняться и может потребоваться перенастройка системы, например, добавление утреннего режима, включающего кофеварку и жалюзи одновременно. Кроме того, наши специалисты обучат вас новым функциям, помогая максимально использовать возможности системы.</P>
+                    <P>Производители выпускают обновления — убирая слабые места и добавляя новые функции, так что вовремя обновляя софт и приложения, вы избегаете глюков и усиливаете безопасность. Мы протестируем ваши сценарии автоматизации: если ваши привычки поменялись, и пора настроить что-то новенькое, вроде утреннего режима с кофеваркой и открытием жалюзей.</P>
   
                   </div>
                 </div>
   
   
-                <P>Экономический аспект также играет роль: регулярное обслуживание требует затрат на услуги специалистов и замену устаревших компонентов. Однако профилактика обходится дешевле, чем устранение крупных сбоев, а энергоэффективность системы, поддерживаемой в оптимальном состоянии, позволяет экономить на коммунальных расходах.</P>
+                <P>Регулярное обслуживание требует затрат, однако профилактика обходится дешевле, чем устранение крупных сбоев, а система в рабочем состоянии, позволяет вам сэкономить на счетах на свет и тепло.</P>
               </div>
             </div>
   
