--- a/upgrading.html
+++ b/upgrading.html
@@ -145,14 +145,14 @@
                   <img src="images/reprogramming.jpg" alt="" width="500">
                 </div>
                 <div class="col-6">
-                  <P>Следующим этапом мы проведем обновление программного обеспечения, как отдельных блоков, так и системы в целом, при необходимости сможем провести интеграцию с современными платформами управления.  Проведем настройку совместимости между устройствами разных производителей, если потребуется перепрограммируем сценарии вашей системы. Добавим голосовые ассистенты к вашей системе умного дома, что позволит вам управлять системой, посредством речевых команд.</P>
+                  <P>Дальше — обновим программы для отдельных устройств и всей системы, а если надо, подключим ее к современным платформам управления. Настроим, чтобы оборудование от разных брендов работало вместе, переделаем сценарии под вас. И добавим голосовых помощников — просто скажите, и умный дом послушается!</P>
 
                 </div>
               </div>
 
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 <div class="col-6">
-                  <P>Проведем интеграцию вашей системы с системами безопасности, такими как камеры видеонаблюдения, системой домофонии, установим охранные датчики, что значительно повысит защиту вашего жилья. Улучшенная интеграция и новые функции, такие как удаленный контроль через облачные сервисы и новые умные сценарии, сделают управление вашим домом более удобным и гибким. Кроме того, регулярное обновление снижает риски ошибок, так как производители устраняют уязвимости в своих продуктах.</P>
+                  <P>Добавим к вашей системе умного дома систему безопасности: добавляя камеры, домофоны и охранные датчики — ваш дом будет под надежной защитой. С новыми функциями, вроде управления через облако и новыми умными сценариями, контролировать все станет проще и удобнее. Плюс регулярное обновление снижает риски ошибок, так как производители устраняют уязвимости в своих продуктах.</P>
 
                 </div>
                 <div class="col-6">
